--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/dmccer/gulu-static",
   "dependencies": {
+    "gulp-less": "^1.3.6"
+  },
+  "devDependencies": {
     "gulp": "^3.8.8"
   }
 }
