--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "url": "https://github.com/dmccer/gulu-static/issues"
   },
   "homepage": "https://github.com/dmccer/gulu-static",
-  "dependencies": {
-    "gulp-less": "^1.3.6"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "del": "^0.1.3",
+    "gulp": "^3.8.8",
+    "gulp-imagemin": "^1.0.1",
+    "gulp-less": "^1.3.6",
+    "gulp-sourcemaps": "^1.2.2",
+    "gulp-uglify": "^1.0.1",
+    "gulp-watch": "^1.0.7"
   }
 }
