--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "gulp": "^3.8.8",
     "gulp-imagemin": "^1.0.1",
     "gulp-less": "^1.3.6",
-    "gulp-sourcemaps": "^1.2.2",
-    "gulp-uglify": "^1.0.1",
-    "gulp-watch": "^1.0.7"
+    "gulp-uglify": "^1.0.1"
   }
 }
